crates/stackable-versioned-macros/tests/comp_inputs/default/fail/submodule_use_statement.stderr
error: submodules must only define `use` statements
 --> tests/comp_inputs/default/fail/submodule_use_statement.rs:7:13
  |
7 |             struct Foo;
  |             ^^^^^^
